fix- footer bottom gap

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -11,14 +11,14 @@
   margin: 5px 2px;
 }
 /* social media footer only */
-.footer__socials {
+div.footer__socials {
   display: flex;
   justify-content: center;
   padding: 5% 0 2%;
   position: absolute;
-  bottom: 0;
+  bottom: 0px;
   width: 100%;
-  height: 10rem;
+  height: 5rem;
 }
 /* copyright footer only  */
 footer {
@@ -60,9 +60,5 @@ footer {
     bottom: 12px;
     width: 100%;
     height: 3.5rem;
-  }
-
-  footer {
-    height: auto;
   }
 }
